# devops-recitation-demo1

./: azure-pipelines.yml  pyproject.toml
apple_store/: main.py  models.py  utils.py
tests/: test_main.py
